fixed the spacing issue again

--- a/app/assets/stylesheets/homepage/faq.css.scss
+++ b/app/assets/stylesheets/homepage/faq.css.scss
@@ -3,7 +3,6 @@
   padding-bottom: 30px;
   border-bottom: 1px solid #dfdfdf;
   padding: 100px;
-  margin-left: 100px;
   ul {
     // margin: 10px 5%;
     float: left;
