--- a/app/assets/stylesheets/homepage/key_points.css.scss
+++ b/app/assets/stylesheets/homepage/key_points.css.scss
@@ -1,13 +1,12 @@
 .big_wrapper {
   background: $body_background;
   border-bottom: 1px solid #d2d2d2;
-  padding: 0px 0px;
 }
 
 .big_wrapper .wrapper {
   background: $body_background;
   width: 100%;
-  padding: 40px 0px;
+  padding: 20px 0px;
 }
 
 .point_copy {
